[package]
authors = ["ChainSafe Systems <info@chainsafe.io>"]
name = "test-serialization"
version = "0.1.0"

edition = "2021"
license = "Apache-2.0"
publish = false

[features]
default = []

# browser feature is used to run wasm tests in headless browser context
browser = []

[dev-dependencies]
bin-prot = { workspace = true }
mina-consensus = { workspace = true }
mina-crypto = { workspace = true }
mina-rs-base = { workspace = true }
mina-serialization-types = { workspace = true }
proof-systems = { workspace = true }
test-fixtures = { path = "../test-fixtures" }

anyhow = "1"
ark-ff = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
criterion = { version = "0.3", features = ["html_reports"] }
hex = { workspace = true }
num = { workspace = true }
pretty_assertions = "1"
rand = "0.8"
serde = { workspace = true }
serde_json = "1"
time = { workspace = true }
wasm-bindgen-test = "0.3"

[profile.bench]
lto = true

[[bench]]
harness = false
name = "block_deserialization"

[[bench]]
harness = false
name = "block_serialization"
